--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h1>Building reliable workflows for real-world GIS operations.</h1>
                 <p class="hero-subtitle">
                     I create GIS tools, automated workflows, and high-integrity spatial datasets 
-                    that support addressing, street naming, 911 operations, land records, and 
+                    that support E911 addressing, street naming, and 
                     decision-making in county government.
                 </p>
 
@@ -55,9 +55,7 @@
                         <li>Addressing & 911 GIS</li>
                         <li>Automated GIS Workflows</li>
                         <li>Data Integrity & QA/QC</li>
-                        <li>Street Naming Tools (Fuzzy/Phonetic)</li>
-                        <li>GIS Scripting & Python Toolboxes</li>
-                        <li>Remote Sensing Analytics (EPS Modeling)</li>
+                        <li>Street Naming Tools</li>
                     </ul>
                 </div>
             </div>
@@ -70,7 +68,7 @@
             <div>
                 <h2>About Me</h2>
                 <p>
-                    I'm a GIS Technician in county government, focusing on address management,
+                    I'm a GIS Technician II for Guadalupe County, TX, focusing on address management,
                     street naming, land records, and public safety datasets. My work centers on 
                     automating repetitive tasks and building reliable GIS workflows that reduce 
                     errors and speed up operations.
@@ -80,11 +78,6 @@
                     that streamline everyday workflows such as address verification, parcel 
                     selection, and street name conflict checks.
                 </p>
-                <p>
-                    Outside of county GIS, I explore remote sensing and analytics to model 
-                    earnings and production for mining operations using spectral indices, 
-                    nighttime lights, and commodity data.
-                </p>
             </div>
 
             <div>
@@ -93,7 +86,7 @@
                     <li>Translating messy real-world workflows into clean GIS tools</li>
                     <li>Automating high-volume processes using Python & ArcPy</li>
                     <li>Designing data integrity rules to prevent bad inputs</li>
-                    <li>Working across departments to improve GIS operations</li>
+                    <li>Working across departments to improve interdepartmental operations</li>
                 </ul>
             </div>
         </div>
@@ -141,7 +134,6 @@
                         <li>Addressing & Street Naming Policy</li>
                         <li>911 & Emergency Response Datasets</li>
                         <li>Subdivision & Land Development GIS</li>
-                        <li>Remote Sensing (Sentinel/Landsat/VIIRS)</li>
                     </ul>
                 </div>
             </div>
@@ -195,18 +187,6 @@
                     </p>
                     <p class="project-impact"><strong>Impact:</strong> Shifted QA from reactive to proactive,
                         preventing invalid inputs at the source.</p>
-                </article>
-
-                <!-- Project 4 -->
-                <article class="project-card">
-                    <h3>Remote Sensing EPS Prediction for Mining Sites</h3>
-                    <p class="project-meta">Sentinel-2 · Landsat · VIIRS · Python Modeling</p>
-                    <p>
-                        Integrated multiple satellite indices (NDVI, BSI, thermal, night lights) 
-                        with commodity pricing to predict quarterly EPS for an iron ore operation.
-                    </p>
-                    <p class="project-impact"><strong>Impact:</strong> Demonstrated the ability to link 
-                        spatial data with financial analytics for operational forecasting.</p>
                 </article>
 
             </div>
