--- a/index.html
+++ b/index.html
@@ -245,18 +245,14 @@
             <div class="contact-grid">
                 <div>
                     <h3>Email</h3>
-                    <p><a href="mailto:your.email@example.com">your.email@example.com</a></p>
+                    <p><a href="mailto:johnathanknoll02@gmail.com">johnathanknoll02@gmail.com</a></p>
                 </div>
 
                 <div>
                     <h3>LinkedIn</h3>
-                    <p><a href="#" target="_blank">LinkedIn Profile</a></p>
+                    <p><a href="www.linkedin.com/in/johnathan-knoll-5a362b237" target="_blank">LinkedIn Profile</a></p>
                 </div>
 
-                <div>
-                    <h3>GitHub</h3>
-                    <p><a href="#" target="_blank">GitHub</a></p>
-                </div>
             </div>
         </div>
     </section>
