--- a/index.html
+++ b/index.html
@@ -62,35 +62,41 @@
         </div>
     </section>
 
-    <!-- ABOUT -->
-    <section id="about" class="section">
-        <div class="container two-column">
-            <div>
-                <h2>About Me</h2>
-                <p>
-                    I'm a GIS Technician II for Guadalupe County, TX, focusing on address management,
-                    street naming, land records, and public safety datasets. My work centers on 
-                    automating repetitive tasks and building reliable GIS workflows that reduce 
-                    errors and speed up operations.
-                </p>
-                <p>
-                    I design ArcGIS Pro Tasks, Python toolboxes, and Excel-integrated systems 
-                    that streamline everyday workflows such as address verification, parcel 
-                    selection, and street name conflict checks.
-                </p>
-            </div>
-
-            <div>
-                <h3>Strengths</h3>
-                <ul class="key-points">
-                    <li>Translating messy real-world workflows into clean GIS tools</li>
-                    <li>Automating high-volume processes using Python & ArcPy</li>
-                    <li>Designing data integrity rules to prevent bad inputs</li>
-                    <li>Working across departments to improve interdepartmental operations</li>
-                </ul>
-            </div>
+<!-- ABOUT -->
+<section id="about" class="section">
+    <div class="container">
+        <div>
+            <h2>About Me</h2>
+            <p>
+                I'm a GIS Technician II for Guadalupe County, TX, focusing on address management,
+                street naming, land records, and public safety datasets. My work centers on 
+                automating repetitive tasks and building reliable GIS workflows that reduce 
+                errors and speed up operations.
+            </p>
+            <p>
+                I design ArcGIS Pro Tasks, Python toolboxes, and Excel-integrated systems 
+                that streamline everyday workflows such as address verification, parcel 
+                selection, and street name conflict checks.
+            </p>
+            <p>
+                I graduated from Texas State University in 2024 with a B.S. in Geographic Information
+                Science and a minor in Nature and Heritage Tourism, which grounded me in both the
+                technical side of GIS and how people experience and interact with place.
+            </p>
         </div>
-    </section>
+
+        <div>
+            <h3>Strengths</h3>
+            <ul class="key-points">
+                <li>Translating messy real-world workflows into clean GIS tools</li>
+                <li>Automating high-volume processes using Python & ArcPy</li>
+                <li>Designing data integrity rules to prevent bad inputs</li>
+                <li>Working across departments to improve interdepartmental operations</li>
+            </ul>
+        </div>
+    </div>
+</section>
+
 
     <!-- SKILLS -->
     <section id="skills" class="section section-alt">
