--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
                 <div>
                     <h3>LinkedIn</h3>
-                    <p><a href="www.linkedin.com/in/johnathan-knoll-5a362b237" target="_blank">LinkedIn Profile</a></p>
+                    <p><a href="www.linkedin.com/in/johnathan-knoll" target="_blank">LinkedIn Profile</a></p>
                 </div>
 
             </div>
