--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             </p>
             <p>
                 I design ArcGIS Pro Tasks, Python toolboxes, and Excel-integrated systems 
-                that streamline everyday workflows such as address verification, parcel 
-                selection, and street name conflict checks.
+                that streamline everyday workflows such as address verification, data entry,
+                and street name conflict checks.
             </p>
             <p>
                 I graduated from Texas State University in 2024 with a B.S. in Geographic Information
